release 1.1.2-ea (2009-09)
- Fixed issue when a Content-Type request header is absent and resource methods
  consume (explicitly or by default) "*/*".
  When a Content-Type request header is absent resource methods that consume
  "*/*" take priority over other reosurce methods that consume other media
  types. Thus "*/*" means consuming any media type or no media type.
  See also com.sun.jersey.core.provider.EntityHolder to safely consume a
  request entity if present, otherwise declare that such an entity is not
  present.
- Support for explcitly adding a root resource class or root resource singleton
  by programatically declaring the root path, rather than using the @Path
  annotation. See ResourceConfig.getExplicitRootResources for more details.
- Support the throwing of WebApplicationException from within a singleton
  or stateless session bean method. This will only work with GF v3 build 58
  or greater.
- Fixed issue 302
  https://jersey.dev.java.net/issues/show_bug.cgi?id=302
  Allow a relative template name to be resolved to an absolute template name
  that is a flat name if the template cannot be resolved the path-based
  rule.
  The flat name is fully qualified class name plus a "." plus the template name.
  For example, given the resolving class com.foo.MyResource and the template
  name index the absolute name will be "com.foo.MyResource.index.jsp".
- Fixed issue 161
  https://jersey.dev.java.net/issues/show_bug.cgi?id=161
  The Jersey client can now be used completely independently of the Jersey
  server side when errors are produces by certain message body readers and
  writers.
  Response and Response.ResponseBuilder are now implemented such that they
  can be used on the client side (without having to include jersey server
  dependencies). This is important for some message body readers and writers
  that may throw WebApplicationException, which in turn defers to Response
  for building a response.
- Fixed issue 337