@@ -38,8 +38,6 @@
 package com.sun.jersey.core.provider.jaxb;
 
 import com.sun.jersey.core.impl.provider.entity.Inflector;
-import com.sun.jersey.impl.ImplMessages;
-import com.sun.jersey.core.util.ThrowHelper;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -76,6 +74,16 @@ import javax.xml.stream.XMLStreamReader;
  * <p>
  * Implementing classes may extend this class to provide specific marshalling
  * and unmarshalling behaviour.
+ * <p>
+ * When unmarshalling a {@link UnmarshalException} will result in a
+ * {@link WebApplicationException} being thrown with a status of 400
+ * (Client error), and a {@link JAXBException} will result in a
+ * {@link WebApplicationException} being thrown with a status of 500
+ * (Internal Server error).
+ * <p>
+ * When marshalling a {@link JAXBException} will result in a
+ * {@link WebApplicationException} being thrown with a status of 500
+ * (Internal Server error).
  *
  * @author Paul.Sandoz@Sun.Com
  */
@@ -152,10 +160,8 @@ public abstract class AbstractListElementProvider extends AbstractJAXBProvider<O
             if (c != UTF8)
                 m.setProperty(Marshaller.JAXB_ENCODING, charsetName);
             writeList(elementType, c, mediaType, charset, m, entityStream);
-        } catch (JAXBException cause) {
-            throw ThrowHelper.withInitCause(cause,
-                    new IOException(ImplMessages.ERROR_MARSHALLING_JAXB(t.getClass()))
-                    );
+        } catch (JAXBException ex) {
+            throw new WebApplicationException(ex, 500);
         }
     }
 
@@ -222,10 +228,8 @@ public abstract class AbstractListElementProvider extends AbstractJAXBProvider<O
             throw new WebApplicationException(ex, 400);
         } catch (XMLStreamException ex) {
             throw new WebApplicationException(ex, 400);
-        } catch (JAXBException cause) {
-            throw ThrowHelper.withInitCause(cause,
-                    new IOException(ImplMessages.ERROR_UNMARSHALLING_JAXB(type))
-                    );
+        } catch (JAXBException ex) {
+            throw new WebApplicationException(ex, 500);
         }
     }
 
